mobile version && tests

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,7 @@
   "По алфавиту": "By alphabet",
   "По дню рождения": "By birthday",
   "Не могу обновить данные. Проверь соединение с интернетом.": "I can't update the data. Check your internet connection.",
-  "Секундочку, гружусь...": "Just a second, loading..."
+  "Секундочку, гружусь...": "Just a second, loading...",
+  "Непредвиденная ошибка": "Unexpected error",
+  "Перезагрузить": "Reload"
 }
