--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "По алфавиту": "По алфавиту",
   "По дню рождения": "По дню рождения",
   "Не могу обновить данные. Проверь соединение с интернетом.": "Не могу обновить данные. Проверь соединение с интернетом.",
-  "Секундочку, гружусь...": "Секундочку, гружусь..."
+  "Секундочку, гружусь...": "Секундочку, гружусь...",
+  "Непредвиденная ошибка": "Непредвиденная ошибка",
+  "Перезагрузить": "Перезагрузить"
 }
